--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,3 +1,3 @@
-추적 번호를 복사하세요! 이제 앱을 열지 않고도 배송 제품을 주의 깊게 살펴볼 수 있습니다. 주문 세부 정보 > 배송 추적 > 더 보기에서 새로운 동작을 사용하여 추적 번호를 복사하고 원하는 곳에 사용할 수 있습니다.
-
-통계 오류 메시지는 이제 그만! 사이트에 젯팩 사이트 통계 모듈이 없거나 통계를 볼 수 있는 권한이 없는 경우 통계 페이지가 표시되지 않습니다. 성가신 오류 메시지를 볼 필요가 없으므로 제거했습니다.
+- 알림이 "주문"에 표시되므로 "알림" 탭에 새로운 ID가 필요합니다. 실제로 리뷰만 표시되므로 "리뷰"로 이름을 바꿨습니다.
+- 정보 새로 고침을 시도할 때 레이블이 올바르지 않은 위치에 추가된 이상한 UI가 생성된 주문 세부정보 화면에 버그가 있었으나 지금은 해결되었습니다.
+- 이제 하단 탭에 배지가 "주문" 아이콘과 겹쳐 표시되므로 진행 중인 주문 수를 빠르게 확인할 수 있습니다.
