--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,3 +1,3 @@
-Копируйте номера отслеживания Внимательно следить за доставкой стало еще проще — даже не нужно заходить в приложение. Перейдите на страницу "Информация о заказе" > "Отслеживание посылки" > "Дополнительно". Там можно копировать номера отслеживания и использовать их в любых сторонних сервисах.
-
-Сообщения об ошибке больше не будет! Если на вашем сайте нет модуля статистики Jetpack или у вас нет разрешения на доступ к таким данным, у вас просто не будет отображаться страница статистики. Мы убрали сообщение об ошибке, так что можете про него забыть.
+Так как уведомления отображаются на вкладке "Заказы", вкладке "Уведомления" понадобилось новое название. Теперь на этой вкладке отображаются только обзоры, поэтому она стала называться именно так.
+— Устранена ошибка, из-за которой при обновлении страницы с информацией о заказе смещались элементы пользовательского интерфейса.
+— На значке "Заказы" на нижней вкладке теперь отображается количество заказов, которые в данный момент обрабатываются.
