--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,3 +1,3 @@
-Kopiera spårningsnummer! Det är nu enklare att hålla koll på din leverans utan att öppna appen. I Beställningsinformation > Leveransspårning > Mer finns det en ny åtgärd för att kopiera ditt spårningsnummer att använda närhelst du vill.
-
-Hejdå statistikfelmeddelandet! Om din webbplats inte har Jetpack-modulen webbplatsstatistik eller om du inte har behörighet att visa statistik så kommer du inte se statistiksidan. Du behöver inte se ett irriterande felmeddelande så vi har tagit bort det.
+- Eftersom meddelanden nu visas under "Beställningar", behövde fliken "Meddelanden" en ny identitet. Eftersom den faktiskt bara visar recensioner har vi döpt om den till "Recensioner".
+- Det fanns ett fel på skärmen för beställningsinformation som skapade ett konstigt användargränssnitt med felplacerade etiketter när man försökte uppdatera informationen. Detta fel har nu åtgärdats.
+- Det finns nu en aktivitetsikon på den nedre fliken, som överlappar ikonen för "Beställningar", så att du snabbt kan se antalet pågående beställningar.
