--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,3 +1,3 @@
-复制跟踪编号！现在，不必打开应用程序即可更轻松地关注您的发货情况。在“订单详细信息”>“运输追踪”>“更多”中，提供了一项新操作，可用来复制您的跟踪编号，以便您根据需要进行使用。
-
-告别统计错误消息！如果您的站点没有 Jetpack 站点统计数据模块，或者您没有查看统计数据的权限，那么您将无法看到统计数据页面。您无需看到讨厌的错误消息，所以我们已经将其删除。
+- 由于通知显示在“订单”下，因此“通知”选项卡需要一个新的身份。由于“通知”中实际上只显示评论，因此我们已巧妙地将其重命名为“评论”。
+-“订单详细信息”屏幕中存在一个问题：当您尝试刷新信息时，会创建一个带有放错位置的标签的异常 UI。现在，已修复该问题。
+- 现在，底部的选项卡中有一个徽章，与“订单”图标重叠，因此您可以快速查看正在处理的订单数量。
