--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,3 +1,3 @@
-複製追蹤號碼！現在，你能以更簡單的方式留意貨件動向，無需開啟應用程式。在「訂單詳細資料」>「貨件追蹤」>「更多」中，你可以使用新動作複製追蹤號碼，以便隨意使用。
-
-和統計資料錯誤訊息說再見！如果你的網站沒有 Jetpack 網站統計資料模組，或是你沒有檢視統計資料的權限，你就不會看到統計資料頁面。你不需要看到惱人的錯誤訊息，所以我們將其移除了。
+- 通知會顯示在「訂單」下方，因此「通知」分頁需要新的身分。由於通知只會顯示評論，我們巧妙地將其重新命名為「評論」。
+- 「訂單詳細資料」畫面之前出現一個錯誤，就是在你嘗試重新整理資訊時，會建立含有錯置標籤的奇怪 UI，現在則已解決此問題。
+- 現在底部分頁新增了一個徽章，會覆蓋「訂單」圖示，以便你快速查看正在處理的訂單數量。
