--- a/WooCommerce/Resources/en.lproj/Localizable.strings
+++ b/WooCommerce/Resources/en.lproj/Localizable.strings
@@ -1,7 +1,11 @@
-﻿/* Title for an untitled post, should match WP core */
+﻿/* Displays a date range for a stats interval */
+"%1$@-%2$@" = "%1$@-%2$@";
+
+/* Title for an untitled post, should match WP core */
 "(no title)" = "(no title)";
 
-/* Content of the badge presented over the Orders icon when there are more than 9 orders processing */
+/* A badge with the number of orders. More than nine new orders.
+   Content of the badge presented over the Orders icon when there are more than 9 orders processing */
 "9+" = "9+";
 
 /* An error message. */
@@ -94,7 +98,8 @@
 /* Notification status description for 'approved' */
 "approved" = "approved";
 
-/* Unapprove a comment */
+/* Display label for the review's approved status
+   Unapprove a comment */
 "Approved" = "Approved";
 
 /* Approves a comment. Spoken Hint. */
@@ -641,6 +646,9 @@
 /* Display label for the product's inventory stock status */
 "On back order" = "On back order";
 
+/* Display label for the review's hold status */
+"On hold" = "On hold";
+
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "Open Device Settings";
 
@@ -975,7 +983,8 @@
 /* No comment provided by engineer. */
 "Sorry, you may not use that site address." = "Sorry, you may not use that site address.";
 
-/* Verb, spam a comment */
+/* Display label for the review's spam status
+   Verb, spam a comment */
 "Spam" = "Spam";
 
 /* Notification status description for 'spam' */
@@ -1159,7 +1168,8 @@
 /* Notification status description for 'trash' */
 "trash" = "trash";
 
-/* Move a comment to the trash */
+/* Display label for the review's trash status
+   Move a comment to the trash */
 "Trash" = "Trash";
 
 /* Connect when the SSL certificate is invalid */
@@ -1242,6 +1252,12 @@
 
 /* Used when the response doesn't have a valid url to display */
 "unknown url" = "unknown url";
+
+/* Display label for the review's unspam status */
+"Unspam" = "Unspam";
+
+/* Display label for the review's untrash status */
+"Untrash" = "Untrash";
 
 /* Footer text below the list of logs explaining the maximum number of logs saved. */
 "Up to seven days՚ worth of logs are saved." = "Up to seven days՚ worth of logs are saved.";
