--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,4 +1,3 @@
-- We fixed a sign-in issue where some users would see their site in the sign-in screen, but were unable to tap the Continue button.
-- The orders badge is now easier to read when you have lots of orders.
-- Prevents a potential edge case where the login screen could be dismissed in a future version of iOS.
-- While tuning up the behind-the-scenes for Order Detail screens, we accidentally lost the ability to automatically download any missing product images. Product image downloads restored!
+- Some of you could see your site on the login screen, but couldn’t tap Continue. Well, we fixed that.
+- Being a prolific seller is something to celebrate — so we made the Orders badge a lot .easier to read.
+- We discovered you could no longer automatically download product images from the Order Detail screen. We’ve restored the ability to download them.
