--- a/WooCommerce/Resources/he.lproj/Localizable.strings
+++ b/WooCommerce/Resources/he.lproj/Localizable.strings
@@ -1,12 +1,16 @@
-/* Translation-Revision-Date: 2019-08-21 00:54:31+0000 */
+/* Translation-Revision-Date: 2019-09-04 00:54:04+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: he_IL */
 
 /* No comment provided by engineer. */
+"%1$@-%2$@" = "%1$@-%2$@";
+
+/* Title for an untitled post, should match WP core */
 "(no title)" = "(חסרה כותרת)";
 
-/* Content of the badge presented over the Orders icon when there are more than 9 orders processing */
+/* A badge with the number of orders. More than nine new orders.
+   Content of the badge presented over the Orders icon when there are more than 9 orders processing */
 "9+" = "9+";
 
 /* An error message. */
@@ -93,7 +97,8 @@
 /* Approve a comment */
 "Approve" = "אישור";
 
-/* Unapprove a comment */
+/* Display label for the review's approved status
+   Unapprove a comment */
 "Approved" = "מאושר";
 
 /* Approves a comment. Spoken Hint. */
@@ -575,7 +580,7 @@
 "No Orders found" = "לא נמצאו הזמנות";
 
 /* Empty Reviews List Message */
-"No Reviews Yet!" = "No Reviews Yet!";
+"No Reviews Yet!" = "עוד אין ביקורות!";
 
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "אין פעילות בפרק זמן זה";
@@ -624,6 +629,9 @@
 
 /* Display label for the product's inventory stock status */
 "On back order" = "בהזמנה חוזרת";
+
+/* Display label for the review's hold status */
+"On hold" = "בהמתנה";
 
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "יש לפתוח את הגדרות המכשיר";
@@ -959,7 +967,8 @@
 /* No comment provided by engineer. */
 "Sorry, you may not use that site address." = "לא ניתן להשתמש בכתובת את זו.";
 
-/* Verb, spam a comment */
+/* Display label for the review's spam status
+   Verb, spam a comment */
 "Spam" = "תגובת זבל";
 
 /* VoiceOver accessibility value, informs the user about the X-axis min/max values. It reads: Starting date {date}, ending date {date}. */
@@ -1134,7 +1143,8 @@
 /* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
 "Tracking number %@" = "מספר מעקב %@";
 
-/* Move a comment to the trash */
+/* Display label for the review's trash status
+   Move a comment to the trash */
 "Trash" = "פח";
 
 /* Connect when the SSL certificate is invalid */
@@ -1211,6 +1221,12 @@
 
 /* No comment provided by engineer. */
 "Unknown error" = "שגיאה לא ידועה";
+
+/* Display label for the review's unspam status */
+"Unspam" = "ביטול הסימון כתגובת זבל";
+
+/* Display label for the review's untrash status */
+"Untrash" = "ביטול ההעברה לפח";
 
 /* Footer text below the list of logs explaining the maximum number of logs saved. */
 "Up to seven days՚ worth of logs are saved." = "אנחנו שומרים יומנים באורך של עד שבעה ימים.";
