--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,3 +1,3 @@
-Так как уведомления отображаются на вкладке "Заказы", вкладке "Уведомления" понадобилось новое название. Теперь на этой вкладке отображаются только обзоры, поэтому она стала называться именно так.
-— Устранена ошибка, из-за которой при обновлении страницы с информацией о заказе смещались элементы пользовательского интерфейса.
-— На значке "Заказы" на нижней вкладке теперь отображается количество заказов, которые в данный момент обрабатываются.
+- Некоторые пользователи могли видеть свой сайт на экране входа, но не могли нажать «Продолжить». Мы это исправили.
+- Успешного продавца стоит отметить — поэтому мы сделали значок «Заказы» хорошо читаемым.
+- Мы заметили, что изображения продуктов с экрана «Описание заказа» перестали автоматически загружаться. Мы вернули возможность их загружать.
