--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,3 +1,3 @@
-- 由于通知显示在“订单”下，因此“通知”选项卡需要一个新的身份。由于“通知”中实际上只显示评论，因此我们已巧妙地将其重命名为“评论”。
--“订单详细信息”屏幕中存在一个问题：当您尝试刷新信息时，会创建一个带有放错位置的标签的异常 UI。现在，已修复该问题。
-- 现在，底部的选项卡中有一个徽章，与“订单”图标重叠，因此您可以快速查看正在处理的订单数量。
+- 有些用户可以在登录屏幕上看到自己的站点，但无法轻点“继续”。我们现在修复了这个问题。
+- 成为多产的销售商是件值得庆祝的事，因此我们制作了“订单”徽章，使其更易看懂。
+- 我们发现您不能再从“订单详细信息”屏幕自动下载产品图像。我们已经恢复了产品图像下载功能。
