--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,3 +1,3 @@
-- Meldingen worden onder 'Bestellingen' weergegeven, dus had het tabblad 'Meldingen' een nieuwe identiteit nodig. Aangezien hier alleen beoordelingen worden weergegeven, hebben we het 'Beoordelingen' genoemd.
-- Er bevond zich een bug in het scherm Bestelgegevens die tot een vreemde UI met verkeerde labels leidde als je de informatie probeerde te vernieuwen. Die bug is nu verholpen.
-- In het onderste tabblad wordt nu een badge weergegeven die het pictogram 'Bestellingen' overlapt, zodat je snel het aantal te verwerken bestellingen kunt bekijken.
+- Sommige gebruikers konden hun site zien op het inlogscherm, maar niet op Doorgaan klikken. Dat probleem hebben we nu opgelost.
+- Een productieve verkoper zijn, is iets wat gevierd mag worden. Daarom is de badge Bestellingen nu eenvoudiger te lezen.
+- We hebben gemerkt dat je niet meer automatisch productafbeeldingen kon downloaden vanuit het scherm Bestelgegevens. Vanaf nu zijn deze weer te downloaden.
