--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,7 @@
 2.7
 -----
 - bugfix: Reviews were not localized.
+- bugfix: Product Details page was displaying the Price in the wrong currency.
  
 2.6
 -----
