--- a/WooCommerce/Resources/en.lproj/Localizable.strings
+++ b/WooCommerce/Resources/en.lproj/Localizable.strings
@@ -1,5 +1,11 @@
-﻿/* Displays a date range for a stats interval */
+﻿/* Review title. Reads as {Review author} left a review on {Product}. */
+"%1$@ left a review on %2$@" = "%1$@ left a review on %2$@";
+
+/* Displays a date range for a stats interval */
 "%1$@-%2$@" = "%1$@-%2$@";
+
+/* Review title. Reads as {Review author} left a review on {Product}. */
+"%@ left a review on %@" = "%1$@ left a review on %2$@";
 
 /* Title for an untitled post, should match WP core */
 "(no title)" = "(no title)";
@@ -62,6 +68,9 @@
 /* Mark all notifications as read notice */
 "All notifications marked as read" = "All notifications marked as read";
 
+/* Mark all reviews as read notice */
+"All reviews marked as read" = "All reviews marked as read";
+
 /* Backorders status. Example: 'Backorders: allowed' */
 "allowed" = "allowed";
 
@@ -85,6 +94,9 @@
 
 /* Used when a remote response doesn't have a specific message for a specific request */
 "An error occurred while processing your request: " = "An error occurred while processing your request: ";
+
+/* Indicates the reviewer does not have a name. It reads { Anonymous left a review} */
+"Anonymous" = "Anonymous";
 
 /* Application Logs navigation bar title - this screen is where users view the list of application logs available to them. */
 "Application Logs" = "Application Logs";
@@ -128,6 +140,9 @@
 
 /* VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %i, %@, " = "Bar number %1$i, %2$@, ";
+
+/* Navigates to Beta features screen */
+"Beta Features" = "Beta Features";
 
 /* Billing title for customer info cell */
 "Billing details" = "Billing details";
@@ -450,10 +465,17 @@
 /* An error message shown when a wpcom user provides the wrong password. */
 "It seems like you've entered an incorrect password. Want to give it another try?" = "It seems like you've entered an incorrect password. Want to give it another try?";
 
+/* Last 24 hours section header */
+"Last 24 hours" = "Last 24 hours";
+
+/* Last 7 days section header */
+"Last 7 days" = "Last 7 days";
+
 /* Later today */
 "later today" = "later today";
 
-/* Settings > Privacy Settings. A text link to the cookie policy. */
+/* Settings > Privacy Settings. A text link to the cookie policy.
+   The action of the top banner on Dashboard that indicates new stats is unavailable */
 "Learn more" = "Learn more";
 
 /* Licenses (information page title) */
@@ -524,7 +546,8 @@
 /* Describes a domain that was mapped to WordPress.com, but registered elsewhere */
 "Mapped Domain" = "Mapped Domain";
 
-/* Accessibility label for the Mark All Notifications as Read Button */
+/* Accessibility label for the Mark All Notifications as Read Button
+   Accessibility label for the Mark All Reviews as Read Button */
 "Mark All as Read" = "Mark All as Read";
 
 /* Fulfill Order Action Button */
@@ -532,6 +555,9 @@
 
 /* VoiceOver accessibility hint for the Mark All Notifications as Read Action */
 "Marks Every Notification as Read" = "Marks Every Notification as Read";
+
+/* VoiceOver accessibility hint for the Mark All Reviews as Read Action */
+"Marks Every Review as Read" = "Marks Every Review as Read";
 
 /* Error message to show to users when trying to upload a media object with no local file associated */
 "Media doesn't have an associated file to upload." = "Media doesn't have an associated file to upload.";
@@ -634,6 +660,9 @@
 /* +2 Days Section Header */
 "Older than 2 days" = "Older than 2 days";
 
+/* +7 Days Section Header */
+"Older than 7 days" = "Older than 7 days";
+
 /* Months Section Header */
 "Older than a Month" = "Older than a Month";
 
@@ -645,9 +674,6 @@
 
 /* Display label for the product's inventory stock status */
 "On back order" = "On back order";
-
-/* Display label for the review's hold status */
-"On hold" = "On hold";
 
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "Open Device Settings";
@@ -709,8 +735,12 @@
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of \(totalValue) received via \(order.paymentMethodTitle)" = "Payment of \(totalValue) received via \(order.paymentMethodTitle)";
 
-/* Display label for the product's pending status */
+/* Display label for the product's pending status
+   Display label for the review's pending status */
 "Pending" = "Pending";
+
+/* Indicates a review is pending approval. It reads { Pending Review · Content of the review} */
+"Pending Review" = "Pending Review";
 
 /* Accessibility label that lets the user know the data is a phone number before speaking the phone number. */
 "Phone number: %@" = "Phone number: %@";
@@ -777,6 +807,9 @@
 
 /* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
 "Product %ld has been removed from your store" = "Product %ld has been removed from your store";
+
+/* Title of the Products tab — plural form of Product */
+"Products" = "Products";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Prompts with the option to call or message the billing customer.";
@@ -1178,6 +1211,12 @@
 /* No comment provided by engineer. */
 "Try another account" = "Try another account";
 
+/* The action of the top banner on Dashboard that indicates new stats is available */
+"Try It Now" = "Try It Now";
+
+/* The title of the top banner on Dashboard that indicates new stats is available */
+"Try our improved stats" = "Try our improved stats";
+
 /* When social login fails, this button offers to let the user try again with a differen email address */
 "Try with another email" = "Try with another email";
 
@@ -1323,6 +1362,9 @@
 /* shown in promotional screens during first launch */
 "Watch readers from around the world read and interact with your site — in real time." = "Watch readers from around the world read and interact with your site — in real time.";
 
+/* The info of the top banner on Dashboard that indicates new stats is unavailable */
+"We have reverted to the old stats as we couldn’t find the WooCommerce Admin plugin" = "We have reverted to the old stats as we couldn’t find the WooCommerce Admin plugin";
+
 /* Instructional text on how to open the email containing a magic link. */
 "We sent you a magic signup link! Check your email on this device, and tap the link in the email to finish signing up." = "We sent you a magic signup link! Check your email on this device, and tap the link in the email to finish signing up.";
 
@@ -1346,6 +1388,9 @@
 
 /* Label prefix. Example: 'Weight: 1kg' */
 "Weight:" = "Weight:";
+
+/* The info of the top banner on Dashboard that indicates new stats is available */
+"We’re rolling out improvements to stats for stores using the WooCommerce Admin plugin" = "We’re rolling out improvements to stats for stores using the WooCommerce Admin plugin";
 
 /* Title of alert helping users understand their site address */
 "What's my site address?" = "What's my site address?";
