Fix release notes

--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,99 +1,3 @@
-2.7
------
-- bugfix: the App Logs shouldn't be editable, only copy / paste.
-- bugfix: Reviews were not localized.
-- bugfix: Product Details page was displaying the Price in the wrong currency.
- 
-2.6
------
-- bugfix: 9+ orders in the orders badge text is now easier to read
-- bugfix: Keep those sign-in bugs coming! We tracked down and fixed a `Log in with Jetpack` issue, where users with a Byte Order Mark in their `wp-config.php` file were returning error responses during API requests. These users would see their store listed in the sign-in screen, but were unable to tap the Continue button.
-- bugfix: prevents a potential edge case where the login screen could be dismissed in a future version of iOS.
-- bugfix: While tuning up the behind-the-scenes for Order Detail screens, we accidentally lost the ability to automatically download any missing product images. Product image downloads restored!
-
-2.5
------
-- bugfix: on certain devices, pulling down to refresh on Order Details screen used to result in weird UI with misplaced labels. Should be fixed in this release.
-- Enhancement: Display a badge in the bottom tab, overlapping the Orders icon, to indicate the number of orders processing.
-- Enhancement: The Notifications tab has been replaced by Reviews 
-
-2.4
------
-- New feature: in Order Details > Shipment Tracking, a new action is added to the "more" action menu for copying tracking number.
-- Enhancement: updated the footer in Settings to inform users that we're hiring.
-- bugfix & improvement: when Jetpack site stats module is turned off or when user has no permission to view site stats, the generic error toast is not shown to the user anymore. Additionally, the visitors stats UI is shown/hidden when the Jetpack module is activated/deactivated respectively.
-
-2.3
------
-- Improvement: improved Dynamic Type support in the body of the notification in the Notifications tab.
-
-2.2
------
-- improvement: opting out of Tracks syncs with WordPress.com
- 
-2.1
------
-- improvement: improved support for RTL languages in the Dashboard
-- enhancement: You can now view product images on orders. Tapping on Products in Orders will present a view-only version of the Product's Details.
- 
-2.0
------
-- bugfix: dates in the Order Details screen are now localised.
-- improvement: improved support for larger font sizes in the login screen
- 
-1.9
------
-- bugfix: fixes "Unable to load content" error message when attempting to get Top Performers content.
-- new feature: You can now manually add shipment tracking to an Order. This feature is for users who have the [Shipment Tracking plugin](https://woocommerce.com/products/shipment-tracking) installed.
-- bugfix: fixes Store Picker: some users are unable to continue after logging in.
-- bugfix: fixes a crash when the network connection is slow
- 
-1.8
------
-
-1.7.1
------
-- Fixed a bug where Order List did not load for some users.
-- update: this app supports iOS 12.0 and up.
-- improvement: improved support for large text sizes.
-- bugfix: fixes Order List not loading for some users.
-- bugfix: fixes "Unable to load content" error message when attempting to get Top Performers content.
- 
-1.7
------
-- improvement: you can now log in using a site address.
-
-1.6
------
-- improvement: Tracking numbers can now be copied to the pasteboard from the order details screen.
-
-1.5
------
-- bugfix: Sometimes Settings would style all the options like "Log Out". No longer happens now.
-- bugfix: order status refreshes upon pull-to-refresh in Order Details
-- bugfix: payment status label background color showing up beyond rounded border
-- improvement: change top performers text from "Total Product Order" to "Total orders" for clarity
-- bugfix: fixed an issue on the order details screen where the shipment tracking dates were incorrect
-
-1.4
------
-- bugfix: fix a crash happening on log out
-- new feature: Add shipment tracking to Order Details screen
-- improvement: The store switcher now allows you to go back to the previous screen without logging you out
-- improvement: Custom order status labels are now supported! Instead of just displaying the order status slug and capitalizing the slug, the custom order status label will now be fetched from the server and properly displayed.
-- improvement: Filtering by custom order status now supported!
-- new feature: You can now manually change the status of an order on the order details screen
-- bugfix: correctly flips chevron on Dashboard > New Orders, to support RTL languages.
-- bugfix: fixed an issue on the order details screen where the shipment tracking dates were incorrect
-
-1.3
------
-- bugfix: Allows for decimal quantities which some extensions have
-- new feature: quick site select. Navigate to Settings > select row with store website.
-- improvement: Updated the colors of the bars in the charts for better readability
-- improvement: Present an error message with an option to retry when adding a note to an order fails
-- improvement: Present an error message with an option to retry when fulfilling an order fails
-- bugfix: Log out of the current account right after selecting "Try another account" in store picker
-- improvement: Use the store name for the title of the view in "My store" tab
-- improvement: Add an alert to let the user know about our new store switcher
-- improvement: Display Address in Order Details screen unless every field is empty
+- Some of you could see your site on the login screen, but couldn’t tap Continue. Well, we fixed that.
+- Being a prolific seller is something to celebrate — so we made the Orders badge a lot .easier to read.
+- We discovered you could no longer automatically download product images from the Order Detail screen. We’ve restored the ability to download them.
